[gd_scene load_steps=4 format=3 uid="uid://bq7uyf5bvh5ye"]

[ext_resource type="Script" path="res://Scenes/GameMenus/SettingsMenu/settings_menu.gd" id="1_nbc8a"]
[ext_resource type="Script" path="res://UI/Menus/Components/Slider/AudioSlider.gd" id="2_77ddp"]
[ext_resource type="Script" path="res://UI/Menus/Components/Slider/AudioSpinBox.gd" id="3_r6sxm"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nbc8a")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -101.0
offset_right = 204.5
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="AudoDeviceSetting" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BoxContainer/AudoDeviceSetting"]
layout_mode = 2
text = "AUDIO_DEVICE"

[node name="OptionButton" type="OptionButton" parent="BoxContainer/AudoDeviceSetting"]
layout_mode = 2

[node name="MasterSetting" type="HBoxContainer" parent="BoxContainer"]
layout_direction = 1
layout_mode = 2

[node name="Label" type="Label" parent="BoxContainer/MasterSetting"]
layout_mode = 2
text = "AUDIO_MASTER_BUS
"

[node name="AudioSlider" type="HSlider" parent="BoxContainer/MasterSetting" node_paths=PackedStringArray("linked_spinbox")]
custom_minimum_size = Vector2(150, 24)
layout_direction = 1
layout_mode = 2
script = ExtResource("2_77ddp")
linked_spinbox = NodePath("../AudioSpinBox")
target_bus = "Master"

[node name="AudioSpinBox" type="SpinBox" parent="BoxContainer/MasterSetting"]
layout_mode = 2
script = ExtResource("3_r6sxm")

[node name="MusicSetting" type="HBoxContainer" parent="BoxContainer"]
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="BoxContainer/MusicSetting"]
layout_mode = 2
text = "AUDIO_MUSIC_BUS
"

[node name="AudioSlider" type="HSlider" parent="BoxContainer/MusicSetting" node_paths=PackedStringArray("linked_spinbox")]
custom_minimum_size = Vector2(150, 24)
layout_direction = 1
layout_mode = 2
script = ExtResource("2_77ddp")
linked_spinbox = NodePath("../AudioSpinBox")

[node name="AudioSpinBox" type="SpinBox" parent="BoxContainer/MusicSetting"]
layout_mode = 2
script = ExtResource("3_r6sxm")

[node name="SFXSetting" type="HBoxContainer" parent="BoxContainer"]
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="BoxContainer/SFXSetting"]
layout_mode = 2
text = "AUDIO_SFX_BUS
"

[node name="AudioSlider" type="HSlider" parent="BoxContainer/SFXSetting" node_paths=PackedStringArray("linked_spinbox")]
custom_minimum_size = Vector2(150, 24)
layout_direction = 1
layout_mode = 2
script = ExtResource("2_77ddp")
linked_spinbox = NodePath("../AudioSpinBox")
target_bus = "SFX"

[node name="AudioSpinBox" type="SpinBox" parent="BoxContainer/SFXSetting"]
layout_mode = 2
script = ExtResource("3_r6sxm")

[node name="UISetting" type="HBoxContainer" parent="BoxContainer"]
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="BoxContainer/UISetting"]
layout_mode = 2
text = "AUDIO_UI_BUS
"

[node name="AudioSlider" type="HSlider" parent="BoxContainer/UISetting" node_paths=PackedStringArray("linked_spinbox")]
custom_minimum_size = Vector2(150, 24)
layout_direction = 1
layout_mode = 2
script = ExtResource("2_77ddp")
linked_spinbox = NodePath("../AudioSpinBox")
target_bus = "UI"

[node name="AudioSpinBox" type="SpinBox" parent="BoxContainer/UISetting"]
layout_mode = 2
script = ExtResource("3_r6sxm")

[node name="AmbientSetting" type="HBoxContainer" parent="BoxContainer"]
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="BoxContainer/AmbientSetting"]
layout_mode = 2
text = "AUDIO_AMBIENT_BUS
"

[node name="AudioSlider" type="HSlider" parent="BoxContainer/AmbientSetting" node_paths=PackedStringArray("linked_spinbox")]
custom_minimum_size = Vector2(150, 24)
layout_direction = 1
layout_mode = 2
script = ExtResource("2_77ddp")
linked_spinbox = NodePath("../AudioSpinBox")
target_bus = "Ambient"

[node name="AudioSpinBox" type="SpinBox" parent="BoxContainer/AmbientSetting"]
layout_mode = 2
script = ExtResource("3_r6sxm")

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2

[connection signal="item_selected" from="BoxContainer/AudoDeviceSetting/OptionButton" to="." method="_on_option_button_item_selected"]
